tests/snapshots/fixtures__fixture@model__group_properties_err.snap
---
source: tests/fixtures.rs
expression: "common::tree_sexp(&tree)"
---
(source_file
  (workspace body:
    (workspace_block
      (model body:
        (model_block
          (group name:
            (string) body:
            (group_block
              (archetype_instance kind:
                (identifier)
                (ERROR) name:
                (string) metadata:
                (string))))))))
  (ERROR))
