tests/snapshots/fixtures__fixture@model__model_properties_ok.snap
---
source: tests/fixtures.rs
expression: "common::tree_sexp(&tree)"
---
(source_file
  (workspace body:
    (workspace_block
      (model body:
        (model_block
          (properties_block
            (property_entry name:
              (string) value:
              (string)))))
      (views body:
        (views_block)))))
