tests/snapshots/fixtures__fixture@model__multi_line_semantic_err.snap
---
source: tests/fixtures.rs
expression: "common::tree_sexp(&tree)"
---
(source_file
  (workspace body:
    (workspace_block
      (model body:
        (model_block
          (software_system identifier:
            (identifier) name:
            (string) body:
            (software_system_block
              (ERROR
                (identifier)
                (string)))))))))
